--- a/templates/Pharmacy/pharmacy_base.html
+++ b/templates/Pharmacy/pharmacy_base.html
@@ -395,8 +395,11 @@ span.date {
             <li class="nav-item">
               <a class="nav-link" href="view_Booking" >View booking</a>
             </li>
+              <li class="nav-item">
+              <a class="nav-link" href="prescription_status" >prescription status</a>
+            </li>
                <li class="nav-item">
-              <a class="nav-link" href="view_feedback" >View feedback</a>
+              <a class="nav-link" href="view_feedback" >feedback</a>
             </li>
 {#                 <li class="nav-item">#}
 {#              <a class="nav-link" href="view_complaint" >View complaints</a>#}
