--- a/templates/Pharmacy/view_prescription.html
+++ b/templates/Pharmacy/view_prescription.html
@@ -114,7 +114,7 @@ alert("{{ messages }}")
                               <th>Quantity</th>
                               <th>Time</th>
                               <th>Consider food</th>
-{#                               <th>status</th>#}
+                               <th>status</th>
                           </tr>
 
                           <tr>
@@ -125,7 +125,7 @@ alert("{{ messages }}")
                               <td><input type="text" readonly   class="form-control" value="{{ Prescription.Quantity1 }}"  name="Quantity1" placeholder="{{ Prescription.Quantity1 }}"></td>
                               <td><input type="text" readonly   class="form-control" value="{{ Prescription.time1 }} "  name="time1" placeholder="{{ Prescription.time1 }}"> </td>
                               <td><input type="text" readonly   class="form-control"  value="{{ Prescription.food_time1 }}" name="food_time1" placeholder="{{ Prescription.food_time1 }}"> </td>
-{#                               <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status1 }}" name="food_time1" placeholder="{{ Prescription.available_status1 }}"> </td>#}
+                               <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status1 }}" name="food_time1" placeholder="{{ Prescription.available_status1 }}"> </td>
 
                           </tr>
                           <tr>
@@ -135,7 +135,7 @@ alert("{{ messages }}")
                               <td><input type="text"  readonly   class="form-control"  name="Quantity2" value="{{ Prescription.Quantity2 }}" placeholder="{{ Prescription.Quantity2 }}"></td>
                               <td><input type="text"  readonly   class="form-control"  name="time2" value="{{ Prescription.time2}}" placeholder="{{ Prescription.time2}}"> </td>
                               <td><input type="text" readonly   class="form-control"  name="food_time2" value="{{ Prescription.food_time2 }}" placeholder="{{ Prescription.food_time2 }}"> </td>
-{#                              <td><input type="text" readonly   class="form-control"  value="{{ available_status1 }}" name="food_time1" placeholder="{{ available_status1 }}"> </td>#}
+                              <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status2 }}" name="food_time1" placeholder="{{ Prescription.available_status2 }}"> </td>
                           </tr>
                           <tr>
                               <td>3</td>
@@ -144,7 +144,7 @@ alert("{{ messages }}")
                               <td><input type="text" readonly   class="form-control"  name="Quantity3"   value="{{ Prescription.Quantity3 }}" placeholder="{{ Prescription.Quantity3 }}"></td>
                               <td><input type="text" readonly   class="form-control"  name="time3"       value="{{ Prescription.time3 }}" placeholder="{{ Prescription.time3 }}"> </td>
                               <td><input type="text" readonly   class="form-control"  name="food_time3"  value="{{ Prescription.food_time3 }}" placeholder="{{ Prescription.food_time3 }}"> </td>
-{#                              <td><input type="text" readonly   class="form-control"  value="{{ available_status1 }}" name="food_time1" placeholder="{{ available_status1 }}"> </td>#}
+                              <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status3 }}" name="food_time1" placeholder="{{ Prescription.available_status3 }}"> </td>
                           </tr>
                           <tr>
                               <td>4</td>
@@ -153,7 +153,7 @@ alert("{{ messages }}")
                               <td><input type="text" readonly  class="form-control"  name="Quantity4"  value="{{ Prescription.Quantity4 }}" placeholder="{{ Prescription.Quantity4 }}"></td>
                               <td><input type="text" readonly   class="form-control"  name="time4"      value="{{ Prescription.time4 }}" placeholder="{{ Prescription.time4 }}"> </td>
                               <td><input type="text" readonly   class="form-control"  name="food_time4" value="{{ Prescription.food_time4 }}" placeholder="{{ Prescription.food_time4 }}"> </td>
-{#                              <td><input type="text" readonly   class="form-control"  value="{{ available_status1 }}" name="food_time1" placeholder="{{ available_status1 }}"> </td>#}
+                              <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status4 }}" name="food_time1" placeholder="{{ Prescriptionavailable_status4 }}"> </td>
                           </tr>
                           <tr>
                               <td>5</td>
@@ -162,7 +162,7 @@ alert("{{ messages }}")
                               <td><input type="text" readonly   class="form-control"  name="Quantity5"  value="{{ Prescription.Quantity5 }}" placeholder="{{ Prescription.Quantity5 }}"></td>
                               <td><input type="text" readonly   class="form-control"  name="time5"      value="{{ Prescription.time5 }}" placeholder="{{ Prescription.time5 }}"> </td>
                               <td><input type="text" readonly   class="form-control"  name="food_time5" value="{{ Prescription.food_time5 }}" placeholder="{{ Prescription.food_time5 }}"> </td>
-{#                              <td><input type="text" readonly   class="form-control"  value="{{ available_status1 }}" name="food_time1" placeholder="{{ available_status1 }}"> </td>#}
+                              <td><input type="text" readonly   class="form-control"  value="{{ Prescriptionavailable_status5 }}" name="food_time1" placeholder="{{ Prescription.available_status5 }}"> </td>
                           </tr>
                           <tr>
                               <td>6</td>
@@ -171,7 +171,7 @@ alert("{{ messages }}")
                               <td><input type="text"  readonly  class="form-control"  name="Quantity6" value="{{ Prescription.Quantity6 }}" placeholder="{{ Prescription.Quantity6 }}"></td>
                               <td><input type="text"  readonly class="form-control"   name="time6" value="{{ Prescription.time6 }}" placeholder="{{ Prescription.time6 }}"> </td>
                               <td><input type="text"  readonly class="form-control"   name="food_time6" value="{{ Prescription.food_time6 }}" placeholder="{{ Prescription.food_time6 }}"> </td>
-{#                              <td><input type="text" readonly   class="form-control"  value="{{ available_status1 }}" name="food_time1" placeholder="{{ available_status1 }}"> </td>#}
+                              <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status6 }}" name="food_time1" placeholder="{{ Prescription.available_status6 }}"> </td>
                           </tr>
                           <tr>
                               <td>7</td>
@@ -180,7 +180,7 @@ alert("{{ messages }}")
                               <td><input type="text"  readonly  class="form-control"  name="Quantity7" value="{{ Prescription.Quantity7 }}" placeholder="{{ Prescription.Quantity7 }}"></td>
                               <td><input type="text"  readonly class="form-control"   name="time7" value="{{ Prescription.time7 }}" placeholder="{{ Prescription.time7 }}"> </td>
                               <td><input type="text"  readonly class="form-control"   name="food_time7" value="{{ Prescription.food_time7 }}" placeholder="{{ Prescription.food_time7 }}"> </td>
-{#                              <td><input type="text" readonly   class="form-control"  value="{{ available_status1 }}" name="food_time1" placeholder="{{ available_status1 }}"> </td>#}
+                              <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status7 }}" name="food_time1" placeholder="{{ Prescription.available_status7 }}"> </td>
                           </tr>
                           <tr>
                               <td>8</td>
@@ -189,7 +189,7 @@ alert("{{ messages }}")
                               <td><input type="text"  readonly  class="form-control"   name="Quantity8" value="{{ Prescription.Quantity8 }}" placeholder="{{ Prescription.Quantity8 }}"></td>
                               <td><input type="text"  readonly class="form-control"    name="time8" value="{{ Prescription.time8 }}" placeholder="{{ Prescription.time8 }}"> </td>
                               <td><input type="text"  readonly class="form-control"    name="food_time8" value="{{ Prescription.food_time8 }}" placeholder="{{ Prescription.food_time8 }}"> </td>
-{#                              <td><input type="text" readonly   class="form-control"  value="{{ available_status1 }}" name="food_time1" placeholder="{{ available_status1 }}"> </td>#}
+                              <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status8 }}" name="food_time1" placeholder="{{ Prescriptionavailable_status8 }}"> </td>
                           </tr>
                           <tr>
                               <td>9</td>
@@ -198,7 +198,7 @@ alert("{{ messages }}")
                               <td><input type="text"   readonly  class="form-control"    name="Quantity9" value="{{ Prescription.Quantity9 }}" placeholder="{{ Prescription.Quantity9 }}"></td>
                               <td><input type="text"   readonly class="form-control"     name="time9" value="{{ Prescription.time9 }}" placeholder="{{ Prescription.time9 }}"> </td>
                               <td><input type="text"   readonly class="form-control"     name="food_time9" value="{{ Prescription.food_time9 }}" placeholder="{{ Prescription.food_time9 }}"> </td>
-{#                              <td><input type="text" readonly   class="form-control"  value="{{ available_status1 }}" name="food_time1" placeholder="{{ available_status1 }}"> </td>#}
+                              <td><input type="text" readonly   class="form-control"  value="{{ Prescription.available_status9 }}" name="food_time1" placeholder="{{ Prescription.available_status9 }}"> </td>
                           </tr>
 
 
