--- a/templates/admin/view_complaint.html
+++ b/templates/admin/view_complaint.html
@@ -67,34 +67,26 @@ alert("{{ messages }}")
       <div class="page-section">
     <div class="container">
       <h1 class="text-center mb-5 wow fadeInUp">View Complaints</h1>
-
-      <table class="table table-bordered table-striped table-hover" style="background-color: #002633;width: 1000px;">
+ <table class="table table-bordered table-striped table-hover" style="background-color: #002633;width: 1000px;">
                                  <th class="success" style="color: white;">Photo</th>
                                  <th class="success" style="color: white;">name</th>
                                  <th class="success" style="color: white;">contact</th>
                                  <th class="success" style="color: white;">email</th>
                                  <th class="success" style="color: white;">address</th>
-                                 <th class="success" style="color: white;">Proof</th>
-{#                                  <th class="success" style="color: white;">Place</th>#}
-                                   <th class="success" style="color: white;">District</th>
-{#                                  <th class="success" style="color: white;">Status</th>#}
-                                    <th class="success" style="color: white;">Accept</th>
-          <th class="success" style="color: white;">Reject</th>
-              {% for i in Staff %}
+                                  <th class="success" style="color: white;">feedback</th>
+
+              {% for i in complaint %}
                                 <tr style="background-color:white;width: 700px;">
-                                    <td><img  style="width: 100px;height: 100px;" src="{{ i.photo.url }}" class="img-responsive" alt="slide"></td>
-                                    <td>{{ i.user.first_name}}</td>
-                                    <td>{{ i.contact}}</td>
-                                    <td>{{ i.email}}</td>
-                                    <td>{{ i.Address}}</td>
-                                    <td><a href="{{ i.id_proof.url }}" download>Download </a></td>
+                                    <td><img  style="width: 100px;height: 100px;" src="{{ i.USER.photo.url }}" class="img-responsive" alt="slide"></td>
+                                    <td>{{ i.USER.user.first_name}}</td>
+                                    <td>{{ i.USER.contact}}</td>
+                                    <td>{{ i.USER.email}}</td>
+                                    <td>{{ i.USER.Address}}</td>
 
-{#                                    <td>{{ i.place }}</td>#}
-                                    <td>{{ i.district }}</td>
-{#                                    <td>{{ i.status }}</td>#}
+                                    <td>{{ i.complaints }}</td>
 
-                                    <td><button style="background-color:lightslategray"><a href="staff_accepted?id={{ i.user_id}}" class=" btn btn-success" style="color:black">Approve</a></button></td>
-                                    <td><button style="background-color:lightslategray"><a href="staff_rejected?id={{ i.user_id}}" class=" btn btn-danger" style="color:black">Reject</a></button></td>
+{#                                    <td><button style="background-color:lightslategray"><a href="staff_accepted?id={{ i.user_id}}" class=" btn btn-success" style="color:black">Approve</a></button></td>#}
+{#                                    <td><button style="background-color:lightslategray"><a href="staff_rejected?id={{ i.user_id}}" class=" btn btn-danger" style="color:black">Reject</a></button></td>#}
 
                                 </tr>
               {% endfor %}
