--- a/templates/user/user_view_booking.html
+++ b/templates/user/user_view_booking.html
@@ -9,7 +9,7 @@ alert("{{ messages }}")
   <div class="page-hero bg-image " style="background-image: url({% static 'assets/img/doctorbanner.jpg' %});">
     <div class="hero-section">
       <div class="container text-center wow zoomIn">
-        <h1 class="subhead" style="color: darkgreen;padding-bottom: 400px">DOCTOR PANEL</h1>
+        <h1 class="subhead" style="color: darkgreen;padding-bottom: 400px">USER PANEL</h1>
 {#        <h1 class="display-4" style="color: white">Healthy Living</h1>#}
 {#        <a href="#" class="btn btn-primary">Let's Consult</a>#}
       </div>
