--- a/templates/Pharmacy/view_feedback.html
+++ b/templates/Pharmacy/view_feedback.html
@@ -6,11 +6,11 @@
 alert("{{ messages }}")
 </script>
 {% endif %}
-  <div class="page-hero bg-image " style="background-image: url({% static 'assets/img/Slider-2-2.png' %});">
+  <div class="page-hero bg-image " style="background-image: url({% static 'assets/img/doctorbanner.jpg' %});">
     <div class="hero-section">
       <div class="container text-center wow zoomIn">
-        <h1 class="subhead" style="color: white">PHARMACY PANEL</h1>
-        <h1 class="display-4" style="color: white">Healthy Living</h1>
+        <h1 class="subhead" style="color: darkgreen;padding-bottom: 400px">USER PANEL</h1>
+{#        <h1 class="display-4" style="color: white">Healthy Living</h1>#}
 {#        <a href="#" class="btn btn-primary">Let's Consult</a>#}
       </div>
     </div>
@@ -50,6 +50,24 @@ alert("{{ messages }}")
       </div>
     </div> <!-- .page-section -->
 
+  <div class="page-section bg-light">
+    <div class="container">
+        <form action="" method="post" class="main-form" style="padding-right: 1500px">
+          {% csrf_token %}
+        <div class="row mt-5 ">
+
+          <div class="col-12 col-sm-6 py-2 wow fadeInLeft">
+              <label>FEEDBACK</label>
+              <input type="text" style="background-color:lightslategray;width: 300px;" class="form-control" name="feed_back" placeholder="enter feedback">
+
+          </div>
+
+        </div>
+
+        <button type="submit" class="btn btn-primary mt-3 wow zoomIn">SUBMIT</button>
+      </form>
+    </div>
+  </div> <!-- .page-section -->
 
 
 
@@ -57,24 +75,17 @@ alert("{{ messages }}")
     <div class="container">
       <table class="table">
                           <tr>
-                              <td>Image</td>
-                              <th>Medicine Name</th>
-                              <th>Price</th>
-                              <th>Quantity</th>
-                              <th>Description</th>
-                              <th>Status</th>
-                              <th>Remove</th>
+
+                              <th>feedback</th>
+
+                              <th>action</th>
                           </tr>
-                        {% for i in  Medicine %}
+                        {% for i in  feeds %}
                           <tr>
-                              <td><img  style="width: 100px;height: 100px;" src="{{ i.photo.url }}" class="img-responsive" alt="slide"></td>
-                              <td>{{ i.med_name }}</td>
-                              <td>{{ i.med_price }}</td>
-                              <td>{{ i.quantity }}</td>
-                              <td>{{ i.description }}</td>
-                              <td>{{ i.status }}</td>
-{#                              <td><a href="remove_division?id={{ i.id }}" class="badge badge-danger">Edit</a></td>#}
-                              <td><a href="Remove_Medicine?id={{ i.id }}" class="badge badge-danger">remove</a></td>
+
+                              <td>{{ i.feedback }}</td>
+
+                           <td><a href="delete_feedback?id={{ i.id }}" class="badge badge-danger">Delete</a></td>
                           </tr>
                         {% endfor %}
 
@@ -85,89 +96,33 @@ alert("{{ messages }}")
 
 
 
-  <div class="page-section">
-    <div class="container">
-      <h1 class="text-center mb-5 wow fadeInUp">Our Doctors</h1>
-
-      <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_1.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Stein Albert</p>
-              <span class="text-sm text-grey">Cardiology</span>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_2.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Alexa Melvin</p>
-              <span class="text-sm text-grey">Dental</span>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_3.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_3.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_3.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+{#  <div class="page-section">#}
+{#    <div class="container">#}
+{#      <h1 class="text-center mb-5 wow fadeInUp">Our Doctors</h1>#}
+{##}
+{#      <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">#}
+{#        {% for i in Doctor %}#}
+{#        <div class="item">#}
+{#          <div class="card-doctor">#}
+{#            <div class="header">#}
+{#              <img src="{{ i.photo.url }}" alt="">#}
+{#              <div class="meta">#}
+{#                <a href="#"><span class="mai-call"></span></a>#}
+{#                <a href="#"><span class="mai-logo-whatsapp"></span></a>#}
+{#              </div>#}
+{#            </div>#}
+{#            <div class="body">#}
+{#              <p class="text-xl mb-0">Dr. {{ i.user.first_name }}</p>#}
+{#              <span class="text-sm text-grey">Cardiology</span>#}
+{#            </div>#}
+{#          </div>#}
+{#        </div>#}
+{#          {% endfor %}#}
+{#        </div>#}
+{##}
+{#      </div>#}
+{#    </div>#}
+{#  </div>#}
 
   <div class="page-section bg-light">
     <div class="container">
