--- a/templates/admin/view_medicine_index.html
+++ b/templates/admin/view_medicine_index.html
@@ -40,14 +40,14 @@ alert("{{ messages }}")
              <a class="nav-link" href="medicine_status" >Medicine Status</a>
             </div>
           </div>
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card-service wow fadeInUp">
-              <div class="circle-shape bg-accent text-white">
-                <span class="mai-shield-checkmark"></span>
-              </div>
-               <a class="nav-link" href="request_medicine" >Request to Medicine</a>
-            </div>
-          </div>
+{#          <div class="col-md-3 py-3 py-md-0">#}
+{#            <div class="card-service wow fadeInUp">#}
+{#              <div class="circle-shape bg-accent text-white">#}
+{#                <span class="mai-shield-checkmark"></span>#}
+{#              </div>#}
+{#               <a class="nav-link" href="request_medicine" >Request to Medicine</a>#}
+{#            </div>#}
+{#          </div>#}
 {#            <div class="col-md-3 py-3 py-md-0">#}
 {#            <div class="card-service wow fadeInUp">#}
 {#              <div class="circle-shape bg-accent text-white">#}
@@ -68,81 +68,23 @@ alert("{{ messages }}")
       <h1 class="text-center mb-5 wow fadeInUp">Our Doctors</h1>
 
       <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">
+         {% for i in doctors %}
         <div class="item">
           <div class="card-doctor">
             <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_1.jpg' %}" alt="">
+              <img src="{{ i.photo.url }}" alt="">
               <div class="meta">
                 <a href="#"><span class="mai-call"></span></a>
                 <a href="#"><span class="mai-logo-whatsapp"></span></a>
               </div>
             </div>
             <div class="body">
-              <p class="text-xl mb-0">Dr. Stein Albert</p>
-              <span class="text-sm text-grey">Cardiology</span>
+              <p class="text-xl mb-0">Dr.{{ i.user.first_name }}</p>
+              <span class="text-sm text-grey">{{ i.category }}</span>
             </div>
           </div>
         </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_2.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Alexa Melvin</p>
-              <span class="text-sm text-grey">Dental</span>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_3.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_3.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{% static 'assets/img/doctors/doctor_3.jpg' %}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. Rebecca Steffany</p>
-              <span class="text-sm text-grey">General Health</span>
-            </div>
-          </div>
-        </div>
+          {% endfor %}
       </div>
     </div>
   </div>
