--- a/templates/staff_registration.html
+++ b/templates/staff_registration.html
@@ -68,47 +68,47 @@ alert("{{ messages }}")
         <div class="row mb-6">
           <div class="col-sm-6 py-2 wow fadeInLeft">
             <label for="fullName">Name</label>
-            <input type="text" id="fullName" class="form-control" name="name" placeholder="Full name..">
+            <input type="text" id="fullName" class="form-control" name="name" placeholder="Full name.." required="">
           </div>
           <div class="col-sm-6 py-2 wow fadeInRight">
             <label for="emailAddress">Email</label>
-            <input type="text" id="emailAddress" class="form-control" name="email" placeholder="Email address..">
+            <input type="text" id="emailAddress" class="form-control" name="email" placeholder="Email address.." required="">
           </div>
           <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">Phone</label>
-            <input type="text" id="subject" class="form-control" name="phone" placeholder="Enter Phone ..">
+            <input type="text" id="subject" pattern="[6-9]{1}[0-9]{9}" title="enter valid phone number" class="form-control" name="phone" placeholder="Enter Phone .." required="">
           </div>
             <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">Address</label>
-            <input type="text" id="subject" class="form-control" name="address"  placeholder="Enter Address..">
+            <input type="text" id="subject" class="form-control" name="address"  placeholder="Enter Address.." required="">
           </div>
             <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">Place</label>
-            <input type="text" id="subject" class="form-control" name="place"  placeholder="Enter Place..">
+            <input type="text" id="subject" class="form-control" name="place"  placeholder="Enter Place.." required="">
           </div>
             <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">District</label>
-            <input type="text" id="subject" class="form-control" name="district" placeholder="Enter District..">
+            <input type="text" id="subject" class="form-control" name="district" placeholder="Enter District.." required="">
           </div>
             <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">Date of Birth</label>
-            <input type="date" id="subject" class="form-control" name="Dob" placeholder="Enter Dob..">
+            <input type="date" id="subject" class="form-control" name="Dob" placeholder="Enter Dob.." required="">
           </div>
             <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">Documents</label>
-            <input type="FILE" id="subject" class="form-control" name="document" placeholder="Enter ..">
+            <input type="FILE" id="subject" class="form-control" name="document" placeholder="Enter .." required="">
           </div>
             <div class="col-sm-6 py-2 wow fadeInUp">
              <label for="subject">Age</label>
-            <input type="text" id="subject" class="form-control" name="age" placeholder="Enter age..">
+            <input type="text" id="subject" class="form-control" name="age" placeholder="Enter age.." required="">
           </div>
            <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">Photo</label>
-            <input type="FILE" id="subject" class="form-control" name="photo" placeholder="Enter ..">
+            <input type="FILE" id="subject" class="form-control" name="photo" placeholder="Enter .." required="">
           </div>
             <div class="col-sm-6 py-2 wow fadeInUp">
                  <label for="subject">Category</label>
-           <select style="background-color:white" class="form-control"  name="category" id="PLACE" required="required" onchange="show_dis(this.value,0)" >
+           <select style="background-color:white" class="form-control"  name="category" id="PLACE" required="required" onchange="show_dis(this.value,0)"  >
                <option  required="required">---Select---</option>
                <option value="Toxicology">Toxicology</option>
                <option value="Sexologist">Sexologist</option>
@@ -122,11 +122,11 @@ alert("{{ messages }}")
 
              <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">Password</label>
-            <input type="password" id="subject" class="form-control" name="password" placeholder="Enter password..">
+            <input type="password" id="subject" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" class="form-control" name="password" placeholder="Enter password.." required="">
           </div>
              <div class="col-sm-6 py-2 wow fadeInUp">
             <label for="subject">Username</label>
-            <input type="text" id="subject" class="form-control" name="username" placeholder="Enter username..">
+            <input type="text" id="subject" class="form-control" name="username" placeholder="Enter username.." required="">
           </div>
 
         </div>
