--- a/templates/user/feedback.html
+++ b/templates/user/feedback.html
@@ -18,176 +18,111 @@ alert("{{ messages }}")
   </div>
 
 
-
+  <div class="bg-light">
+    <div class="page-section py-3 mt-md-n5 custom-index">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-4 py-3 py-md-0">
+            <div class="card-service wow fadeInUp">
+              <div class="circle-shape bg-secondary text-white">
+                <span class="mai-chatbubbles-outline"></span>
+              </div>
+              <p><span>Chat</span> with a doctors</p>
+            </div>
+          </div>
+          <div class="col-md-4 py-3 py-md-0">
+            <div class="card-service wow fadeInUp">
+              <div class="circle-shape bg-primary text-white">
+                <span class="mai-shield-checkmark"></span>
+              </div>
+              <p><span>One</span>-Health Protection</p>
+            </div>
+          </div>
+          <div class="col-md-4 py-3 py-md-0">
+            <div class="card-service wow fadeInUp">
+              <div class="circle-shape bg-accent text-white">
+                <span class="mai-basket"></span>
+              </div>
+              <p><span>One</span>-Health Pharmacy</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> <!-- .page-section -->
 
   <div class="page-section bg-light">
     <div class="container">
-      <h1 class="text-center wow fadeInUp"></h1>
-      <div class="row mt-5">
-        <div class="col-lg-4 py-2 wow zoomIn">
-            <div>
-{#          <div class="card-blog">#}
-            <div class="header">
-               <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
+        <form action="" method="post" class="main-form" style="padding-right: 1500px">
+          {% csrf_token %}
+        <div class="row mt-5 ">
 
-                <img  src="{% static 'assets/img/Ashwagandha.jpg' %}" alt="">
-                <p>Ashwagandha</p>
-
-            </div>
+          <div class="col-12 col-sm-6 py-2 wow fadeInLeft">
+              <label>FEEDBACK</label>
+              <input type="text" style="background-color:lightslategray;width: 300px;" class="form-control" name="feed_back" placeholder="enter feedback">
 
           </div>
-        </div>
-        <div class="col-lg-4 py-2 wow zoomIn">
-          <div >
-              <div>
-{#            <div class="header">#}
-              <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
 
-                <img src="{% static 'assets/img/Bitter Apricot Kernels.jpg' %}" alt="">
-                  <p>Bitter Apricot Kernels</p>
-
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-4 py-2 wow zoomIn">
-          <div>
-            <div >
-              <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
-
-                <img src="{% static 'assets/img/Black Cumin Seed.jpg' %}" alt="">
-                <p>Black Cumin Seed</p>
-
-            </div>
-
-          </div>
-        </div>
-          <div class="col-lg-4 py-2 wow zoomIn">
-          <div>
-            <div >
-              <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
-
-                <img src="{% static 'assets/img/Curcumin Extract.jpg' %}" alt="">
-                <p>Curcumin Extract</p>
-
-            </div>
-
-          </div>
-        </div>
-           <div class="col-lg-4 py-2 wow zoomIn">
-          <div>
-            <div >
-              <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
-
-                <img src="{% static 'assets/img/Dried Ginger.jpg' %}" alt="">
-                <p>Dried Ginger</p>
-
-            </div>
-
-          </div>
-        </div>
-           <div class="col-lg-4 py-2 wow zoomIn">
-          <div>
-            <div >
-              <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
-
-                <img src="{% static 'assets/img/Gum Guggul.jpg' %}" alt="">
-                <p>Gum Guggul</p>
-
-            </div>
-
-          </div>
-        </div>
-          <div class="col-lg-4 py-2 wow zoomIn">
-          <div>
-            <div >
-              <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
-
-                <img src="{% static 'assets/img/Licorice Roots.jpg' %}" alt="">
-                <p>Licorice Roots</p>
-
-            </div>
-
-          </div>
-        </div>
-          <div class="col-lg-4 py-2 wow zoomIn">
-          <div>
-            <div >
-              <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
-
-                <img src="{% static 'assets/img/Kutki.jpg' %}" alt="">
-                <p>Kutki</p>
-
-            </div>
-
-          </div>
-        </div>
-          <div class="col-lg-4 py-2 wow zoomIn">
-          <div>
-            <div >
-              <div class="post-category">
-{#                <a href="#">Covid19</a>#}
-              </div>
-
-                <img src="{% static 'assets/img/Picrorhiza Kutki.jpg' %}" alt="">
-                <p>Picrorhiza Kutki</p>
-
-            </div>
-
-          </div>
         </div>
 
-        <div class="col-12 text-center mt-4 wow zoomIn">
-          <a href="/admin" class="btn btn-primary">Read More</a>
-        </div>
-
-      </div>
+        <button type="submit" class="btn btn-primary mt-3 wow zoomIn">SUBMIT</button>
+      </form>
     </div>
   </div> <!-- .page-section -->
 
 
-  <div class="page-section">
+
+    <div class="page-section bg-light">
     <div class="container">
-      <h1 class="text-center mb-5 wow fadeInUp">Our Doctors</h1>
+      <table class="table">
+                          <tr>
 
-      <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">
-       {% for i in Doctor %}
-        <div class="item">
-          <div class="card-doctor">
-            <div class="header">
-              <img src="{{ i.photo.url }}" alt="">
-              <div class="meta">
-                <a href="#"><span class="mai-call"></span></a>
-                <a href="#"><span class="mai-logo-whatsapp"></span></a>
-              </div>
-            </div>
-            <div class="body">
-              <p class="text-xl mb-0">Dr. {{ i.user.first_name }}</p>
-              <span class="text-sm text-grey">{{ i.category }}</span>
-            </div>
-          </div>
-        </div>
-          {% endfor %}
+                              <th>feedback</th>
 
-      </div>
+                              <th>action</th>
+                          </tr>
+                        {% for i in  feeds %}
+                          <tr>
+
+                              <td>{{ i.feedback }}</td>
+
+                           <td><a href="delete_feedback?id={{ i.id }}" class="badge badge-danger">Delete</a></td>
+                          </tr>
+                        {% endfor %}
+
+                        </tbody>
+                      </table>
     </div>
-  </div>
+  </div> <!-- .page-section -->
+
+
+
+{#  <div class="page-section">#}
+{#    <div class="container">#}
+{#      <h1 class="text-center mb-5 wow fadeInUp">Our Doctors</h1>#}
+{##}
+{#      <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">#}
+{#        {% for i in Doctor %}#}
+{#        <div class="item">#}
+{#          <div class="card-doctor">#}
+{#            <div class="header">#}
+{#              <img src="{{ i.photo.url }}" alt="">#}
+{#              <div class="meta">#}
+{#                <a href="#"><span class="mai-call"></span></a>#}
+{#                <a href="#"><span class="mai-logo-whatsapp"></span></a>#}
+{#              </div>#}
+{#            </div>#}
+{#            <div class="body">#}
+{#              <p class="text-xl mb-0">Dr. {{ i.user.first_name }}</p>#}
+{#              <span class="text-sm text-grey">Cardiology</span>#}
+{#            </div>#}
+{#          </div>#}
+{#        </div>#}
+{#          {% endfor %}#}
+{#        </div>#}
+{##}
+{#      </div>#}
+{#    </div>#}
+{#  </div>#}
 
   <div class="page-section bg-light">
     <div class="container">
@@ -304,13 +239,7 @@ alert("{{ messages }}")
     </div>
   </div> <!-- .page-section -->
   <div  class="page-hero bg-image " style="background-image: url({% static 'assets/img/banner1.jpg' %}); height: 400px">
-{#    <div class="hero-section">#}
-{#      <div class="container text-center wow zoomIn">#}
-{#        <span class="subhead">Let's make your life happier</span>#}
-{#        <h1 class="display-4">Healthy Living</h1>#}
-{#        <a href="#" class="btn btn-primary">Let's Consult</a>#}
-{#      </div>#}
-{#    </div>#}
+
 
   </div>
 {% endblock %}
